# tui-shimmer

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
